--- a/src/style.css
+++ b/src/style.css
@@ -74,8 +74,10 @@ body {
   transform: scale(var(--search-ratio));
   border-color: rgb(204, 204, 204) transparent transparent;
 }
+
 .search_box > input {
   padding-left: 5px;
+  width: 100%;
   height: 100%;
   border: none;
   outline: none;
@@ -93,14 +95,27 @@ body {
 }
 
 .appList {
-  margin: 0 40px;
+  margin-left: 34px;
+  margin-right: 34px;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
 }
 
+@media (min-width: 500px) {
+  .search_box {
+    min-width: 400px;
+  }
+  main {
+    max-width: 800px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
 .app {
-  margin: 6px;
+  margin-left: 6px;
+  margin-right: 6px;
   width: 60px;
   height: 84px;
   display: flex;
@@ -108,10 +123,7 @@ body {
   align-items: center;
   flex-direction: column;
   margin-bottom: 20px;
-}
-
-.app:last-child {
-  margin-right: auto;
+  position: relative;
 }
 
 .app_icon {
@@ -133,4 +145,21 @@ body {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+}
+
+.app:hover > .delete_app {
+  display: block;
+}
+
+.delete_app {
+  display: none;
+  position: absolute;
+  top: -5px;
+  right: -5px;
+}
+
+.appList > i {
+  width: 60px;
+  margin-left: 6px;
+  margin-right: 6px;
 }
