--- a/src/style.css
+++ b/src/style.css
@@ -95,6 +95,7 @@ body {
   display: none;
   padding: 0;
   position: absolute;
+  z-index: 2;
   top: 60px;
   border-radius: 10px;
   background-color: #fff;
@@ -161,7 +162,7 @@ body {
   align-items: center;
   flex-direction: column;
   margin-bottom: 20px;
-  /* position: relative; */
+  position: relative;
 }
 
 .app_icon {
